# PyDrumScore

./: .buildinfo  .gitignore  .pylintrc  DrumScore.mscx  DrumScoringPrototype.py  DrumScoringPrototype.pyproj  DrumScoringPrototype.sln  LICENSE.md  PyDrumScore.pyproj  PyDrumScore.sln  README.md  RefreshScorePlugin.qml  beats.py  conf.py  config.ini  example_song.py  export.py  exporter.py  index.html  index.rst  logo.glsl  make.bat  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  song.py  song_highway_to_hell.py  test.mscx
.doctrees/: apireference.doctree  contentheader.doctree  contributing.doctree  drumset.doctree  environment.pickle  gettingstarted.doctree  globaltoc.doctree  hybridtoc.doctree  index.doctree  license.doctree  musescore.doctree  philosophy.doctree
.doctrees/source/: modules.doctree  pydrumscore.api.doctree  pydrumscore.beats.doctree  pydrumscore.core.api.doctree  pydrumscore.core.beats.doctree  pydrumscore.core.doctree  pydrumscore.core.export.doctree  pydrumscore.core.song.doctree  pydrumscore.doctree  pydrumscore.export.doctree  pydrumscore.test.doctree  pydrumscore.test.songs.doctree
.github/workflows/: build-and-push-pages.yml  code-quality.yml  documentation.yml  main.yml  run-unit-tests.yml  test.yml  upload-package.yml
Examples/: bass_drum_permutations.txt  hihatopen_permutations.txt
ReferenceXML/: HHEighth.mscx  HHEighthWithSnare.mscx  HHEighthWithSnare.mscz  PartXML.xml
_sources/: contentheader.rst.txt  contributing.rst.txt  drumset.rst.txt  hybridtoc.rst.txt  index.rst.txt  license.rst.txt  musescore.rst.txt  philosophy.rst.txt
_sources/source/: pydrumscore.api.rst.txt  pydrumscore.beats.rst.txt  pydrumscore.core.api.rst.txt  pydrumscore.core.beats.rst.txt  (+7 more)
_static/: alabaster.css  custom.css  documentation_options.js
apireference/: index.html
contentheader/: index.html
contributing/: index.html
docs/: apireference.rst  conf.py  contributing.rst  gettingstarted.rst  globaltoc.rst  hybridtoc.rst  index.html  index.rst  musescore.rst  philosophy.rst  requirements.txt
drumscore/: __main__.py  requirements.txt
drumset/: index.html
genindex/: index.html
gettingstarted/: index.html
globaltoc/: index.html
html/: genindex.html  index.html
hybridtoc/: index.html
license/: index.html
musescore/: index.html
philosophy/: index.html
py-modindex/: index.html
pydrumscore/: __init__.py  __main__.py  __version__.py  api.py  beats.py  config_handling.py  default_config.ini  export.py  export_musescore.py  export_musicxml.py  requirements.txt  xml_handling.py
search/: index.html
source/: modules.html  pydrumscore.core.html  pydrumscore.html  pydrumscore.test.html  pydrumscore.test.songs.html
test/: test_1.py  test_base.py  test_beats.py  test_full_songs.py  test_permutations.py  test_permutations_songs.py
(+266 files in other folders)
