[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrumscore"
description = "A python interface for generating drum sheet music through code"
authors = [{name="Rémy Lapointe"}]
urls = {Documentation="https://www.remylapointe.com/PyDrumScore", GitHub="https://github.com/dual-wield-ray/PyDrumScore"}
readme = "README.md"
license = {text = "GNU GPL"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.7"',
    'xmldiff',
    'from_root',
]
dynamic = ["version"]

[project.scripts]
cli-name = "pydrumscore.core.export:main"

# Gets version number from source control
[tool.setuptools_scm]
write_to = "pydrumscore/__version__.py"

# Avoids mixups of setuptools' auto-search of modules
[tool.setuptools]
packages = ["pydrumscore"]
